--- a/src/main/resource/mybatis.properties
+++ b/src/main/resource/mybatis.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/mybatis
+url=jdbc:mysql://172.16.22.102:3306/mybatis
 name=root
 password=123456
