--- a/pom.xml
+++ b/pom.xml
@@ -165,7 +165,7 @@
         </pluginManagement>
         <resources>
             <resource>
-                <directory>src/main/resources</directory>
+                <directory>src/main/resource</directory>
             </resource>
         </resources>
     </build>
